--- a/.github/workflows/deploy-theme.yml
+++ b/.github/workflows/deploy-theme.yml
@@ -2,12 +2,12 @@ name: Krabi Theme Deploy
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - uses: TryGhost/action-deploy-theme@v1.3.1
         with:
           api-url: ${{ secrets.GHOST_ADMIN_API_URL }}
